--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  position: relative;
   display: flex;
   flex-direction: column;
+  width: 80%;
+  margin: auto;
+}
+.App__header {
+  display: flex;
+  justify-content: space-evenly;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App__navbar {
+  margin: 0 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Logo {
+  width: 75%;
+}
+.Logo img {
+  height: 100%;
+  width: 100%;
+  max-height: 100px;
+  max-width: 200px;
+}
+.App__header ul {
+  display: flex;
+  list-style: none;
+}
+.App__header ul a {
+  margin: 10px;
+  text-decoration: none;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  color: #222;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 1s;
+}
+.App__header ul a:hover {
+  color: #821623;
+}
+hr {
+  height: 16px;
+  background-color: #222;
+  border: none;
+  border-radius: 10px;
+}
+.Footer {
+  background-color: rgba(16, 16, 16, 0.92);
+  color: #fff;
+  text-align: center;
+  padding: 50px;
+  width: 90%;
+  margin: 50px auto 0 auto;
+  border-radius: 10px;
 }
